[gd_scene load_steps=19 format=3 uid="uid://djj81k5qh3db5"]

[ext_resource type="Texture2D" uid="uid://ct1bwp1h0mkj2" path="res://assets/pong_background.png" id="1_e42ov"]
[ext_resource type="Texture2D" uid="uid://bat6xljlcjg4" path="res://assets/480073518_1375789236884207_6784987757028887989_n.jpg" id="2_ixwp5"]
[ext_resource type="Script" path="res://script/main.gd" id="2_jxvlt"]
[ext_resource type="Texture2D" uid="uid://bxhkhwuyi0o6a" path="res://assets/Goat.jpg" id="2_q83l1"]
[ext_resource type="Script" path="res://script/player.gd" id="3_gjsam"]
[ext_resource type="FontFile" uid="uid://dyfi8ejwt236c" path="res://assets/SHPinscher-Regular.otf" id="4_5u8lt"]
[ext_resource type="Script" path="res://script/cpu.gd" id="4_gxlq7"]
[ext_resource type="Script" path="res://script/ball_real.gd" id="6_lvd7t"]
[ext_resource type="AudioStream" uid="uid://cwg4egfgipui8" path="res://assets/drum-hitnormal.wav" id="8_tm5t1"]
[ext_resource type="AudioStream" uid="uid://bjpirv1g6o7er" path="res://assets/ohyes.mp3" id="10_31v65"]
[ext_resource type="AudioStream" uid="uid://yvdnif40gyro" path="res://assets/lancer-laugh.mp3" id="11_q8rd5"]
[ext_resource type="AudioStream" uid="uid://bhx0gvhyussl4" path="res://assets/dogsong-made-with-Voicemod.mp3" id="12_mbl81"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sw1be"]
size = Vector2(5.17678, 40.0445)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_43cnu"]
size = Vector2(253.219, 18.8648)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bs3vd"]
size = Vector2(256.642, 19.4761)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vk4sq"]
size = Vector2(14.8232, 175.157)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_54aa8"]
size = Vector2(15.4809, 175.462)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_32sca"]
size = Vector2(7.23484, 8.25345)

[node name="main" type="Sprite2D"]
texture_filter = 1
scale = Vector2(4.56126, 3.27136)
texture = ExtResource("1_e42ov")
centered = false
script = ExtResource("2_jxvlt")

[node name="Player" type="StaticBody2D" parent="."]
position = Vector2(10, 99.5)
script = ExtResource("3_gjsam")

[node name="ColorRect" type="ColorRect" parent="Player"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 5.0
offset_bottom = 20.0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(2.45407, 0.152839)
shape = SubResource("RectangleShape2D_sw1be")

[node name="CPU" type="StaticBody2D" parent="."]
position = Vector2(238, 99.5)
script = ExtResource("4_gxlq7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CPU"]
position = Vector2(2.45407, 0.152839)
shape = SubResource("RectangleShape2D_sw1be")

[node name="Sprite2D" type="Sprite2D" parent="CPU"]
position = Vector2(2.5037, -0.078043)
scale = Vector2(0.0100484, 0.111668)
texture = ExtResource("2_ixwp5")

[node name="border" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="top" type="CollisionShape2D" parent="border"]
position = Vector2(126.829, -0.567592)
shape = SubResource("RectangleShape2D_43cnu")

[node name="bottom" type="CollisionShape2D" parent="border"]
position = Vector2(128.406, 193.759)
shape = SubResource("RectangleShape2D_bs3vd")

[node name="scoreLeft" type="Area2D" parent="."]
position = Vector2(-4.38475, 10.3932)

[node name="CollisionShape2D" type="CollisionShape2D" parent="scoreLeft"]
position = Vector2(-2.58839, 86.3555)
shape = SubResource("RectangleShape2D_vk4sq")

[node name="scoreRight" type="Area2D" parent="."]
position = Vector2(258.262, 7.03071)

[node name="CollisionShape2D" type="CollisionShape2D" parent="scoreRight"]
position = Vector2(2.25955, 89.5652)
shape = SubResource("RectangleShape2D_54aa8")

[node name="ballReal" type="CharacterBody2D" parent="."]
position = Vector2(128, 99.5)
collision_mask = 3
script = ExtResource("6_lvd7t")

[node name="Sprite2D" type="Sprite2D" parent="ballReal"]
scale = Vector2(0.008, 0.008)
texture = ExtResource("2_q83l1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ballReal"]
position = Vector2(0.109619, -0.152842)
shape = SubResource("RectangleShape2D_32sca")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="ballReal"]
stream = ExtResource("8_tm5t1")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="playerScore" type="Label" parent="HUD"]
offset_left = 456.0
offset_top = 20.0
offset_right = 496.0
offset_bottom = 80.0
theme_override_fonts/font = ExtResource("4_5u8lt")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CPUScore" type="Label" parent="HUD"]
offset_left = 648.0
offset_top = 20.0
offset_right = 688.0
offset_bottom = 80.0
theme_override_fonts/font = ExtResource("4_5u8lt")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="result" type="Label" parent="HUD"]
offset_left = 247.0
offset_top = 120.0
offset_right = 920.0
offset_bottom = 297.0
theme_override_colors/font_color = Color(0.945098, 0, 0, 1)
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
uppercase = true

[node name="win" type="Label" parent="HUD"]
anchors_preset = -1
anchor_right = 0.16
anchor_bottom = 0.185
offset_left = 311.0
offset_top = 120.0
offset_right = 713.68
offset_bottom = 176.12
theme_override_colors/font_color = Color(0, 0.960784, 0, 1)
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="playerScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_31v65")

[node name="CPUScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_q8rd5")

[node name="loseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_mbl81")
volume_db = 16.865

[connection signal="body_entered" from="scoreLeft" to="." method="_on_score_left_body_entered"]
[connection signal="body_entered" from="scoreRight" to="." method="_on_score_right_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
